fixed stack i two column last row alignment

--- a/styles/sass/partials/_aboutMe.scss
+++ b/styles/sass/partials/_aboutMe.scss
@@ -25,6 +25,7 @@
 .stack {
   display: flex;
   flex-wrap: wrap;
+  justify-content: flex-start;
 }
 
 .resumeContainer {
